Issue #2019345 by johnv: Moved entity_<operations> function calls to workfow.entity.inc.
Issue #2019345 by kaare: Fixed $node->name is unset in workflow.tokens.inc.
Issue #2184633 by johnv: Fixed caching of Workflow (BTW, which is now a true entity).
Issue #2019345 by johnv: Moved workflow.node.inc to submodule workflow_node.
Issue #2187151 by johnv: Added an 'Actions buttons' widget to Workflow form for permitted states.
Issue #2187151 by johnv: Added an 'Actions buttons' widget for permitted states on Workflow_node and Entity Form.
Issue #2187677 by johnv, boris sondagh: Removed 'Sys ID' column in Admin UI states page.
Issue #2185859 by johnv: Fixed 'Class not found' error in hook_update_7004.
Issue #2192815 by johnv: Renamed, reordered private functions in workflow.features.inc
Issue #2192815 by johnv: Fixed broken features export since Workflow is an entity.
Issue #2189761 by johnv, zengenuity, naptown: Add Rules support for Workflow Field using 'EntityDefaultRulesController', removing custom code.
Issue #2019345 by johnv: Fixed workflow history is saved twice when adding transition via comment.
Issue #2187151 by johnv: Added an 'Actions buttons' widget to Workflow form on Comments and Entity form for Workflow Field .
Issue #2019345 by johnv: Added workflow_enable() and cleared texts.
Issue #2202405 by johnv: Added Rules action 'Set a workflow field state' to workflow_rules submodule.
Issue #2196587 by johnv: Fixed earlier introduced error in workflow.tokens.inc.
Issue #2196587 by johnv: Fixed Notice: Undefined property: stdClass::$workflow in workflow_tokens().
Issue #2200089 by johnv: Fixed PDOException: SQLSTATE[42S22] upon 'transition delete' when workflow_actions enabled.
Issue #2200089 by johnv: Fixed backwards compatiblity with workflow_actions.
Issue #2205707 by johnv: Moved some views handlers from workflow_extensions to workflow_views.
Issue #2205707 by johnv: Moved workflow_comment_edit_link field handler from workflow_extensions to workflow_views.